--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</header>
 	<center>
 		<figure>
-			<img src="Search-Engine-Spider.jpg" width="300px" height="200px">
+			<img src="https://raw.githubusercontent.com/vipinsaini1989/Wikipedia-search/master/Search-Engine-Spider.jpg" width="300px" height="200px">
 		</figure>
 		<div>
 			<input id="textBox" type="text" placeholder="enter keywords">
